[package]
name = "bddap-aoc-macros"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Procedural macros used by the bddap-aoc crate."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full"] }
