[package]
name = "bddap-aoc"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
anyhow = "1.0.75"
bddap-aoc-macros = "0.1.0"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
humantime = "2.1.0"
linkme = "0.3.17"
reqwest = { version = "0.11.22", features = ["blocking"] }
rpassword = "7.2.0"
serde = { version = "1.0.190", features = ["derive"] }
toml = "0.8.6"
xdg = "2.5.2"

[[example]]
name = "standard"
path = "examples/standard/main.rs"

[[example]]
name = "showcase"
path = "examples/showcase/main.rs"
